fix: Remove invalid escape sequence in stage4 workflow

--- a/.github/workflows/stage4-api-product.yml
+++ b/.github/workflows/stage4-api-product.yml
@@ -47,7 +47,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      \n      - name: Load demo configuration
+      
+      - name: Load demo configuration
         id: load_config
         run: |
           if [ -f ".demo-state.json" ]; then
