--- a/.github/workflows/stage3-api-spec-testing.yml
+++ b/.github/workflows/stage3-api-spec-testing.yml
@@ -31,7 +31,7 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
       
       - name: Install Insomnia CLI
-        run: npm install -g insomnia-inso
+        run: npm install -g @kong/inso@latest
       
       - name: Lint OpenAPI Spec with Inso
         run: |
