feat: Use custom .spectral.yaml ruleset for inso lint
- Check for .spectral.yaml and use --config flag
- Fallback to default OAS ruleset if custom file not found
- Apply custom FHIR validation rules

--- a/.github/workflows/stage3-api-spec-testing.yml
+++ b/.github/workflows/stage3-api-spec-testing.yml
@@ -41,7 +41,13 @@ jobs:
           
           if [ -f ".insomnia/fhir-api-openapi.yaml" ]; then
             echo "📄 Linting OpenAPI specification with Insomnia CLI..."
-            inso lint spec .insomnia/fhir-api-openapi.yaml || true
+            if [ -f ".spectral.yaml" ]; then
+              echo "Using custom Spectral ruleset: .spectral.yaml"
+              inso lint spec .insomnia/fhir-api-openapi.yaml --config .spectral.yaml || true
+            else
+              echo "Using default OAS ruleset"
+              inso lint spec .insomnia/fhir-api-openapi.yaml || true
+            fi
           else
             echo "⚠️  OpenAPI spec not found at .insomnia/fhir-api-openapi.yaml"
           fi
