feat: Display detailed test results in workflow logs
- Add -r spec flag for detailed test output
- Add --verbose flag for more information
- Change to || true to show all output before continuing

--- a/.github/workflows/stage3-api-spec-testing.yml
+++ b/.github/workflows/stage3-api-spec-testing.yml
@@ -58,7 +58,7 @@ jobs:
           echo "🧪 Running API endpoint tests..."
           if [ -f ".insomnia/fhir-api-insomnia.yaml" ]; then
             echo "Running Patient API test suite..."
-            inso run test --workingDir .insomnia/fhir-api-insomnia.yaml || echo "⚠️  Some tests failed"
+            inso run test --workingDir .insomnia/fhir-api-insomnia.yaml -r spec --verbose || true
           else
             echo "⚠️  Insomnia test file not found"
           fi
