--- a/.github/workflows/stage3-api-spec-testing.yml
+++ b/.github/workflows/stage3-api-spec-testing.yml
@@ -58,7 +58,7 @@ jobs:
           echo "🧪 Running API endpoint tests..."
           if [ -f ".insomnia/fhir-api-insomnia.yaml" ]; then
             echo "Running Patient API test suite..."
-            inso run test --workingDir .insomnia/fhir-api-insomnia.yaml -r spec --verbose || true
+            inso run test uts_patient_api_tests --workingDir .insomnia/fhir-api-insomnia.yaml -r spec --verbose || true
           else
             echo "⚠️  Insomnia test file not found"
           fi
