--- a/.github/workflows/stage5-developer-portal.yml
+++ b/.github/workflows/stage5-developer-portal.yml
@@ -13,6 +13,19 @@ on:
         required: false
         type: boolean
         default: false
+  workflow_call:
+    inputs:
+      portal_id:
+        required: false
+        type: string
+        default: ''
+      catalog_api_id:
+        required: false
+        type: string
+      destroy:
+        required: false
+        type: boolean
+        default: false
   # workflow_run:
   #   workflows: ["Stage 4 - API Product"]
   #   types:
