--- a/portal/portal-config.json
+++ b/portal/portal-config.json
@@ -11,8 +11,12 @@
   "default_api_visibility": "public",
   "default_page_visibility": "public",
   "default_application_auth_strategy_id": null,
-  "labels": {},
-  "updated_at": "2026-01-09T04:38:39.212Z",
+  "labels": {
+    "team": "healthcare",
+    "api_type": "fhir",
+    "environment": "production"
+  },
+  "updated_at": "2026-01-09T06:38:20.024Z",
   "created_at": "2026-01-09T04:38:21.805Z",
   "canonical_domain": "d89b009b6d6e.au.kongportals.com"
 }
